Added smoothie for drawing a graph of the CPU usage.

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,13 +1,22 @@
 <html>
   <head>
+    <script type="text/javascript" src="smoothie.js"></script>
   </head>
   <body>
+    <canvas id="mycanvas" width="400" height="100"></canvas>
     <script type="text/javascript">
+      var smoothie = new SmoothieChart();
+      smoothie.streamTo(document.getElementById("mycanvas"), 5000);
+
+      var avgload = new TimeSeries();
+      
       var source = new EventSource('/update-stream');
 
-      source.addEventListener('message', function(e) { 
-      console.log(e.data);
+      source.addEventListener('message', function(e) {
+      line1.append(new Date().getTime(), e.data);
       }, false);
+      
+      smoothie.addTimeSeries(avgload);
     </script>
   </body>
 </html>
